[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tronzap-sdk"
version = "1.0.3"
description = "Official Python SDK for the Tron Energy API by TronZap.com. Buy Tron energy for cheap USDT transfers on TronZap.com"
readme = "README.md"
requires-python = ">=3"
license = {text = "MIT"}
authors = [
    {name = "Tron Energy Market", email = "support@tronzap.com"}
]
keywords = [
    "TronZap",
    "Tron",
    "Trx",
    "Tron API",
    "Trx API",
    "TRX energy",
    "Tron energy",
    "TRON energy api",
    "buy trx energy",
    "buy tron energy",
    "trx energy market",
    "tron energy market",
    "USDT",
    "TRC20",
    "TRC-20",
    "cryptocurrency",
    "blockchain",
    "crypto transfers"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://tronzap.com"
Repository = "https://github.com/tron-energy-market/tronzap-sdk-python"
Documentation = "https://docs.tronzap.com/"
Issues = "https://github.com/tron-energy-market/tronzap-sdk-python/issues"
"Buy Tron Energy" = "https://tronzap.com"
Support = "https://t.me/tronzap_bot"

[tool.black]
line-length = 100
target-version = ['py3']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"